FIX: image align wide and full in admin panel

--- a/assets/sass/wp-gutenberg-block.scss
+++ b/assets/sass/wp-gutenberg-block.scss
@@ -41,8 +41,10 @@
 --------------------------------------------------------------*/
 .wp-block {
 	max-width: 1000px;
+	&[data-align="wide"], &[data-align="full"]{
+		max-width: inherit;
+	}
 }
-
 /*--------------------------------------------------------------
 ### Gutenberg editor style controls
 --------------------------------------------------------------*/
